src/objects/SNI_FL_Message__c.object
<CustomObject>
    <description>When a new Direct Message is initiated following data will be stored in the object 

1.FeedID (DirectMessag Feed ID)
2.Account ID (Family account ID)
3.Marked (Initially this will be false, This is using to show the red flag)</description>
    <fields>
        <fullName>Family_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Record ID of the family Account the Direct Message is linked</description>
        <label>Family ID</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Family</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>SNI FL Messages</relationshipLabel>
        <relationshipName>SNI_FL_Messages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Feed_Id__c</fullName>
        <description>Record ID of the DirectMessageFeed object</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Feed Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marked__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Use to display red flag visible and hidden  in the messaging list UI</description>
        <label>Marked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Member_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Member</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>SNI FL Messages (Member)</relationshipLabel>
        <relationshipName>RTMember</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>SNI FL Messages (Program)</relationshipLabel>
        <relationshipName>Programs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProviderUser_List__c</fullName>
        <description>Store the provider user list selected from TO dropdown</description>
        <encryptionScheme>None</encryptionScheme>
        <label>ProviderUser_List</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Provider_Team__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Provider Team</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>SNI FL Messages (Provider Team)</relationshipLabel>
        <relationshipName>ProviderTeams</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>SNI FL Message</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Family_ID__c</columns>
        <columns>Feed_Id__c</columns>
        <columns>Marked__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>SNI FL Message Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SNI FL Messages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>